优化代码：将如下的方法和常量改为官方推荐的方式：KeyEvent.getModifiers改为getModifiersEx方法、KeyEvent.SHIFT_MASK改为SHIFT_DOWN_MASK常量、new Integer改为Integer.valueOf方法。